--- a/proyecto-Clopix/src/views/CarritoCompras.ejs
+++ b/proyecto-Clopix/src/views/CarritoCompras.ejs
@@ -3,34 +3,13 @@
     <head>
         <meta name="viewport" content="width-device-width">
 
-        <link rel="stylesheet" href="css/CarritoStyle.css">
+        <link rel="stylesheet" href="/css/CarritoStyle.css">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     rel="stylesheet">
 
     </head>
     <body>
-        <header>
-            <div class="menu"> 
-                
-              
-              <nav>
-                 
-                  <ul>
-                    <li><img src="/images/logoCloplix.jpeg" alt="Logo Cloplix"> </li>
-                    <li><a href="#">Tienda</a></li>
-                    <li><a href="#">Catálogos</a></li>
-                    <li><a href="#">Nosotr@s</a></li>
-                    <li style="justify-content: space-evenly;"> 
-                        <a href="#"><i class="fas fa-home" style="color: black;"></i></a>
-                        <a href="#"><i class="fas fa-tag" style="color: black;"></i></a>
-                    
-                  </ul>
-              </nav>
-              
-            </div>
-            
-
-        </header>
+         <%- include('./partials/header')%>
         <table id="ListaCompras">
             <thead>
                 <tr>
@@ -109,20 +88,6 @@
             <br>
             <button type="submit">Seguir Comprando</button>
         </section>
-        <footer id="footer">
-            <section class="infoContacto">
-                <ul class="etiquetasPie">
-                    <li><a href="#">Tienda</a></li>
-                    <li><a href="#">Catálogos</a></li>
-                    <li><a href="#">Nosotr@s</a></li>
-                </ul>     
-                <label for="Info">Siguenos en nuestras redes Sociales,<br> para no perderte ninguna novedad con respecto a nuestros productos</label>
-                <br>
-                <a> <img src="/images/instagram.png" alt="Nuestro Instagram" class="redesSociales"></a>
-                <a> <img src="/images/facebook.png" alt="Nuestro facebook" class="redesSociales"></a>
-            </section>
-
-        </footer>
-
+        <%- include('./partials/footer')%>
     </body>
 </html>
