--- a/proyecto-Clopix/src/views/index.ejs
+++ b/proyecto-Clopix/src/views/index.ejs
@@ -9,28 +9,7 @@
 
     </head>
     <body>
-        <header>
-            <div class="menu"> 
-                
-              
-              <nav>
-                 
-                  <ul>
-                    <li><img src="/images/logo.png.png" alt="Logo Cloplix"> </li>
-                    <li><a href="#">Tienda</a></li>
-                    <li><a href="#">Catálogos</a></li>
-                    <li><a href="#">Nosotr@s</a></li>
-                    <li style="justify-content: space-evenly;"> 
-                        <a href="/productCart"><i style="color: black;" class="fas fa-shopping-cart"></i></a>
-                        <a href="/register"><i style="color: black;" class="fas fa-sign-in-alt"></i></a>
-                        <a href="/login"><i style="color: black;" class="far fa-user"></i></a>
-                  </ul>
-              </nav>
-              
-            </div>
-            
-
-        </header>
+        <%- include('./partials/header')%>
         <section><!-- prueba del slider-->
 
             <ul class="slider">
@@ -131,21 +110,7 @@
                 </main>
     
                 <!--FIN DEL MAIN-->
-
-        <footer id="footer">
-            <section class="infoContacto">
-                <ul class="etiquetasPie">
-                    <li><a href="#">Tienda</a></li>
-                    <li><a href="#">Catálogos</a></li>
-                    <li><a href="#">Nosotr@s</a></li>
-                </ul>     
-                <label for="Info">Siguenos en nuestras redes Sociales,<br> para no perderte ninguna novedad con respecto a nuestros productos</label>
-                <br>
-                <a> <img src="/images/instagram.png" alt="Nuestro Instagram" class="redesSociales"></a>
-                <a> <img src="/images/facebook.png" alt="Nuestro facebook" class="redesSociales"></a>
-            </section>
-
-        </footer>
+                <%- include('./partials/footer')%>
 
     </body>
 </html>
