--- a/proyecto-Clopix/src/views/login.ejs
+++ b/proyecto-Clopix/src/views/login.ejs
@@ -11,30 +11,7 @@
 
 <body>
 
-  <header>
-    <div class="menu"> 
-        
-      
-      <nav>
-         
-          <ul>
-            <li><img src="/images/logo.png.png" alt="Logo Cloplix"> </li>
-            <li><a href="#">Tienda</a></li>
-            <li><a href="#">Catálogos</a></li>
-            <li><a href="#">Nosotr@s</a></li>
-            <li style="justify-content: space-evenly;"> 
-                <a href="/productCart"><i style="color: black;" class="fas fa-shopping-cart"></i></a>
-                <a href="/register"><i style="color: black;" class="fas fa-sign-in-alt"></i></a>
-                <a href="/login"><i style="color: black;" class="far fa-user"></i></a>
-          </ul>
-      </nav>
-      
-    </div>
-    
-
-</header>
-
-
+<%- include('./partials/footer')%>
 
 <div class="wrapper">
 <div class="title">
@@ -62,4 +39,5 @@
 
 
 </div>
+<%- include('./partials/footer')%>
 </body>
