--- a/proyecto-Clopix/src/views/register.ejs
+++ b/proyecto-Clopix/src/views/register.ejs
@@ -3,34 +3,13 @@
     <head>
         <meta name="viewport" content="width-device-width">
 
-        <link rel="stylesheet" href="css/register2.css">
+        <link rel="stylesheet" href="/css/register2.css">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     rel="stylesheet">
 
     </head>
     <body>
-        <header>
-            <div class="menu"> 
-                
-              
-              <nav>
-                 
-                  <ul>
-                    <li><img src="/images/logo.png.png" alt="Logo Cloplix"> </li>
-                    <li><a href="#">Tienda</a></li>
-                    <li><a href="#">Catálogos</a></li>
-                    <li><a href="#">Nosotr@s</a></li>
-                    <li style="justify-content: space-evenly;"> 
-                        <a href="/productCart"><i style="color: black;" class="fas fa-shopping-cart"></i></a>
-                        <a href="/register"><i style="color: black;" class="fas fa-sign-in-alt"></i></a>
-                        <a href="/login"><i style="color: black;" class="far fa-user"></i></a>
-                  </ul>
-              </nav>
-              
-            </div>
-            
-
-        </header>
+      <%- include('./partials/footer')%>
     
         <div class="wrapper">
             <div class="title">
@@ -97,22 +76,7 @@
               
             </div>
         </div>	
-
-
-        <footer id="footer">
-            <section class="infoContacto">
-                <ul class="etiquetasPie">
-                    <li><a href="#">Tienda</a></li>
-                    <li><a href="#">Catálogos</a></li>
-                    <li><a href="#">Nosotr@s</a></li>
-                </ul>     
-                <label for="Info">Siguenos en nuestras redes Sociales,<br> para no perderte ninguna novedad con respecto a nuestros productos</label>
-                <br>
-                <a> <img src="/images/instagram.png" alt="Nuestro Instagram" class="redesSociales"></a>
-                <a> <img src="/images/facebook.png" alt="Nuestro facebook" class="redesSociales"></a>
-            </section>
-
-        </footer>
+        <%- include('./partials/footer')%>
 
     </body>
 </html>
