--- a/proyecto-Clopix/src/views/partials/header.ejs
+++ b/proyecto-Clopix/src/views/partials/header.ejs
@@ -12,9 +12,14 @@
             <li style="justify-content: space-evenly;"> 
                 <a href="#"><i class="fas fa-home" style="color: black;"></i></a>
                 <a href="#"><i class="fas fa-tag" style="color: black;"></i></a>
+                <a href="/productCart"><i style="color: black;" class="fas fa-shopping-cart"></i></a>
+                <a href="/register"><i style="color: black;" class="fas fa-sign-in-alt"></i></a>
+                <a href="/login"><i style="color: black;" class="far fa-user"></i></a>
             
           </ul>
       </nav>
       
     </div>
 </header>
+
+
