--- a/proyecto-Clopix/public/css/CarritoStyle.css
+++ b/proyecto-Clopix/public/css/CarritoStyle.css
@@ -94,7 +94,7 @@ header nav ul li a{
 header nav ul li{
     display: flex;
     width: 25%;
-    align-items: center;
+    align-content: center;
     justify-content:space-between;
 }
 header nav ul{
