--- a/proyecto-Clopix/public/css/login.css
+++ b/proyecto-Clopix/public/css/login.css
@@ -83,37 +83,33 @@ body{
 
   img{
     width: 100%;
-    height: 100%;
   }
   
   header{
     background-color: white;
-    border: 5px solid #f0cddc;
-  }
-
-  header nav ul li a{
-    width: 100%;
+}
+header nav ul li a{
+    width: 15%;
     color: #99DDCC;
-    font-size: 15px;
-    margin: 5px;
+    font-size: 30px;
+    margin: 10px;
    
-  }
-
-  header nav ul li{
+}
+header nav ul li{
     display: flex;
-    width: 50%;
+    width: 25%;
     align-items: center;
     justify-content:space-between;
-  }
-
-  header nav ul{
+}
+header nav ul{
     display: flex;
     flex-direction: row;
-  }
+    flex-wrap: wrap;/*esto hace el salto de linea*/
+}
+
 
   .fas-fa {
-    display: flex;
-    flex-wrap: wrap; 
+    display: flex; 
     position: absolute;
     right: 15px;
     justify-content: space-between;
@@ -136,10 +132,9 @@ body{
     line-height: 1.8;
     flex-grow: 1;
     text-align: center;
-    border-top: 5px solid #00324b;
+    border-top: 2px solid #00324b;
     border-right: 1px solid #00324b;
-    flex-wrap: wrap;
-    position: relative;
+
   }
   
   nav li:last-child a {
@@ -148,6 +143,42 @@ body{
 
   
   /*FIN DEL HEADER*/
+
+  footer a img{
+    width: 8%;
+}
+/*footer*/
+footer a img{
+  width: 8%;
+}
+
+#footer { 
+  position:relative;
+  height: 10vh;
+  /*bottom: 40px;*/
+  margin-bottom: 20px;
+}
+
+.etiquetasPie{
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+}
+
+section.infoContacto{
+  align-items: flex-end;
+}
+
+html{
+  height: 100%;
+}
+img.redesSociales{
+  align-items: flex-end;
+}
+
+
+/*footer*/
+
 
   @media (min-width:420px) {
     .wrapper .form .inputfield{
