--- a/proyecto-Clopix/src/views/login.ejs
+++ b/proyecto-Clopix/src/views/login.ejs
@@ -11,7 +11,7 @@
 
 <body>
 
-<%- include('./partials/footer')%>
+  <%- include('./partials/header')%>
 
 <div class="wrapper">
 <div class="title">
