--- a/proyecto-Clopix/src/views/partials/header.ejs
+++ b/proyecto-Clopix/src/views/partials/header.ejs
@@ -9,12 +9,12 @@
             <li><a href="#">Tienda</a></li>
             <li><a href="#">Catálogos</a></li>
             <li><a href="#">Nosotr@s</a></li>
-            <li style="justify-content: space-evenly;"> 
-                <a href="#"><i class="fas fa-home" style="color: black;"></i></a>
-                <a href="#"><i class="fas fa-tag" style="color: black;"></i></a>
-                <a href="/productCart"><i style="color: black;" class="fas fa-shopping-cart"></i></a>
-                <a href="/register"><i style="color: black;" class="fas fa-sign-in-alt"></i></a>
-                <a href="/login"><i style="color: black;" class="far fa-user"></i></a>
+
+                <a href="/"><i class="fas fa-home" style="color: black;"></i></a>
+                <a href="/Producto/Catalogo"><i class="fas fa-tag" style="color: black;"></i></a>
+                <a href="/Producto/Carrito"><i style="color: black;" class="fas fa-shopping-cart"></i></a>
+                <a href="/User/register"><i style="color: black;" class="fas fa-sign-in-alt"></i></a>
+                <a href="/User/login"><i style="color: black;" class="far fa-user"></i></a>
             
           </ul>
       </nav>
