--- a/proyecto-Clopix/src/views/register.ejs
+++ b/proyecto-Clopix/src/views/register.ejs
@@ -3,13 +3,13 @@
     <head>
         <meta name="viewport" content="width-device-width">
 
-        <link rel="stylesheet" href="/css/register2.css">
+        <link rel="stylesheet" href="/css/register.css">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     rel="stylesheet">
 
     </head>
     <body>
-      <%- include('./partials/footer')%>
+      <%- include('./partials/header')%>
     
         <div class="wrapper">
             <div class="title">
