--- a/proyecto-Clopix/src/views/index.ejs
+++ b/proyecto-Clopix/src/views/index.ejs
@@ -51,7 +51,7 @@
             
                             <p class="precio">$455</p>
             
-                            <p class="descuento">40% off</p>
+                            <p class="descuento">CHAQUETA BOMBER 40% off</p>
             
             
                                     </div>
@@ -78,7 +78,7 @@
             
                             <p class="precio">$150</p>
             
-                            <p class="descuento">20% off</p>
+                            <p class="descuento">VICE CAMISA HAWAIANA 20% off</p>
             
                             </div>
             
@@ -97,7 +97,7 @@
                                 <div class="precio-descuento">
                             <p class="precio">$230</p>
             
-                            <p class="descuento">20% off</p>
+                            <p class="descuento">SUDADERA NEW CHALLENGER 20% off</p>
             
                             </div>
             
