--- a/proyecto-Clopix/src/views/Users/register.ejs
+++ b/proyecto-Clopix/src/views/Users/register.ejs
@@ -14,8 +14,7 @@
               <div class="inputfield">
                 <label>Nombre completo</label>
                 <input type="text" class="input" name="nombreCompleto" required>
-                <p id="errName"> 
-                </p>
+                <p id="errName">  </p>
                 <% if(locals && locals.errors && locals.errors.nombreCompleto){ %>
                   <p><%= errors.nombreCompleto.msg %> </p>
                 <% } %>
@@ -26,6 +25,7 @@
                 <label>E-mail</label>
                 <input type="text" class="input" name= "mail" required>
               </div>
+              <p id="errMail"></p>
               <% if(locals && locals.errors && locals.errors.mail){  %>
                 <p><%= errors.mail.msg %> </p>
                 <% } %>   
@@ -47,7 +47,13 @@
               <div class="inputfield">
                 <label>Contraseña</label>
                 <input type="password" class="input" name="pasword" required>
+                <p id="errPassword"></p>
+               
               </div> 
+              <% if(locals && locals.errors && locals.errors.pasword){  %>
+                <p><%= errors.pasword.msg %> </p>
+                <% } %> 
+              
               <% if(locals && locals.errors && locals.errors.pasword){  %>
                 <p><%= errors.pasword.msg %> </p>
                 <% } %>  
