--- a/proyecto-Clopix/src/views/Users/login.ejs
+++ b/proyecto-Clopix/src/views/Users/login.ejs
@@ -22,7 +22,15 @@
 
             <div class="inputfield">
                 <p>Contraseña</p>
-                <input type="password" class="input" name="password">
+                <input type="password" class="input" name="password" required>
+            </div>
+            <p id="errMail"></p>
+            <% if(locals && locals.errors && locals.errors.mail){  %>
+              <p><%= errors.mail.msg %> </p>
+              <% } %> 
+
+
+
                 <button type="submit">Inicia Sesión</button>
             </form>
         </div>
